* Fixed that code-mirror scroll-views would block clicks outside of their visible areas.
Former-commit-id: bdc7dd3048100752e0fa9279c6ceef3c0d995645

--- a/Source/Frame/Styles/Core.scss
+++ b/Source/Frame/Styles/Core.scss
@@ -156,6 +156,10 @@
 	.clickThroughChain { pointer-events: none; }
 	.clickThroughChain-break { pointer-events: auto; }
 
+	// code-mirror scroll-view extends past visible area, blocking clicks there -- ignore pointer-events on this wrapper element
+	.CodeMirror-scroll > * { pointer-events: auto; }
+	.CodeMirror-scroll { pointer-events: none; }
+
 	.hideScrollbar::-webkit-scrollbar { width: 0px; height: 0px; background: transparent; }
 
 	.recharts-cartesian-axis-tick { font-size: 12px; }
